# MocliaDiceCore

./: .gitignore  CMakeLists.txt  README.md
include/: GeneralUnit.h  MocliaDiceCore.h  RollDiceUnit.h
include/MocliaDiceCore/: COCUnit.h  DNDUnit.h  DX3Unit.h  ExportUnit.h  FudgeUnit.h  GeneralUnit.h  RollDiceUnit.h  WWUnit.h
src/: COCUnit.cpp  DNDUnit.cpp  DX3Unit.cpp  ExportUnit.cpp  FudgeUnit.cpp  GeneralUnit.cpp  RollDiceUnit.cpp  WWUnit.cpp  main.cpp
